[package]
name = "checkout-checkout-validation"
version = "1.0.0"
edition = "2021"

[dependencies]
shopify_function = "1.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"

[profile.release]
lto = true
opt-level = 'z'
strip = true